--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -2,31 +2,49 @@
 
 /* Set background color for the entire page */
 .body {
-    background-color:rgba(53, 68, 92, 0.736);
+    background-color:	#e8eaeb;
     min-height: 5000px;
-    min-width: 100%;
+    width: 100%;
   }
   
-  .text-center {
+.main-container{
+  min-height: 5000px;
+  width: 80%;
+  margin: 0 auto; /* Center horizontally */
+
+}
+  
+  .page-title {
     text-align: center;
+    font-size: 6rem; /* Adjust the font size as needed */
+    margin-bottom: 0.5%;
+    color:#2c3e50;
+
   }
   
   .file-drop-area {
     border: 2px dashed #000;
     padding: 2rem;
-    border-radius: 10px;
+    border-radius: 5px;
     cursor: pointer;
+    font-size: 2rem; /* Adjust the font size as needed */
+    text-align: center;
     transition: all 0.3s ease;
-    width: 300px; /* Adjust width as needed */
+    width: 65%; /* Adjust width as needed */
     margin: 0 auto; /* Center horizontally */
+    background-color: #ecf0f1;
+
   }
   
   .file-drop-area p {
     margin: 0;
+
+
+
   }
   
   .file-drop-area:hover {
-    background-color: #f0f0f0;
+    background-color: #dee2d8;
   }
   
   /* Hide the original file input */
@@ -39,8 +57,13 @@
     overflow: hidden;
     clip: rect(0, 0, 0, 0);
     border: 0;
+    background-color:#e8eaeb;
   }
   
+  .table-headers{
+      color: white; /* Blue background color */
+}
+
   /* Styles for the table container */
   .table-container {
     border: 5px solid #000; /* Border around the table container */
@@ -51,6 +74,7 @@
     padding: 0px; /* Padding inside the table container */
     position: relative; /* Ensure relative positioning for absolute elements */
     width: 100%;
+    border-color: black;
   }
   
   /* Style for table headers */
@@ -81,6 +105,8 @@
     top: 0;
     z-index: 1; /* Ensure header stays above table content */
     background-color: #fff; /* Optional: Add background color */
+    color: blue;
+
   }
   
 
@@ -91,11 +117,7 @@
     width: 100%;
   }
 
-  .file-drop-area {
-    width: 70%;
-    background-color:#3498db;
 
-  }
 
   .scrollable-dropdown {
     max-height: 200px; /* Adjust the height as needed */
@@ -137,17 +159,7 @@
     text-align: center;
   }
   
-  .file-drop-area {
-    border: 2px dashed #bdc3c7;
-    padding: 20px;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .file-drop-area:hover {
-    background-color: #ecf0f1;
-  }
+
   
   .visually-hidden {
     display: none;
@@ -163,7 +175,7 @@
   
   .spinner-border {
     width: 3rem;
-    height: 3rem;
+    height: 2rem;
     border-width: 0.3rem;
   }
   
@@ -245,12 +257,20 @@
     border-color: #dc3545;
     color: #fff;
   }
+
+  .instance-container{
+    border: 3px solid #2c3e50;
+    border-radius: 0.5%;
+
+  }
   
   .header {
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    background-color:#ecf0f1;
+
   }
   
   .header h3 {
