--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -5,6 +5,53 @@
     width: 100%;
 }
 
+.scrollable-content {
+  max-height: 80%; /* Adjust the height as needed */
+  overflow-y: auto;
+  padding: 2%;
+}
+
+.field {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2% 0;
+  border-bottom: 1px solid #ddd;
+}
+
+.column-label {
+  flex: 1;
+  margin-left: 2%;
+}
+
+.column-select {
+  margin-left: auto;
+  width: 40%; /* Adjust width as needed */
+}
+
+.delete-button {
+  margin-right: 2%;
+}
+
+.column-field {
+  display: flex;
+  align-items: center;
+}
+
+
+.dialog-footer {
+  display: flex;
+  justify-content: flex-end;
+  padding: 2%;
+}
+
+
+
+
+
+
+
+
 .main-container {
     min-height: 100%;
     width: 80%;
