added the multi tab logic

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,9 +1,21 @@
 /* Set background color for the entire page */
-.body {
-    background-color:white;
-    min-height: 100vh;
-    width: 100%;
+
+
+.body{
+  text-align: center;
 }
+
+.main-layout {
+  background-color: white;
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+
+}
+
+
 
 .scrollable-content {
   max-height: 80%; /* Adjust the height as needed */
@@ -50,17 +62,6 @@
 
 
 
-
-
-.main-container {
-    min-height: 100%;
-    width: 80%;
-    margin: 0 auto; /* Center horizontally */
-    padding: 1.2rem;
-    
-
-}
-
 .page-title {
     text-align: center;
     font-size: 3rem; /* Adjust the font size as needed */
@@ -101,17 +102,16 @@
 
 
 .table-container {
-  box-shadow: 0 80px 8px rgba(0, 0, 0, 0.1); /* Add shadow for floating effect */
 
-    border: 14px solid whitesmoke;
-    border-radius: 10px;
-    max-height: 400px; /* Adjust max height as needed */
+    max-height: 800px; /* Adjust max height as needed */
     overflow-y: auto; /* Enable vertical scrolling */
-    margin: 20px auto; /* Center horizontally with margin */
-    padding: 0; /* Padding inside the table container */
+    padding: 20px; /* Padding inside the table container */
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     background-color: #ffffff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 
@@ -524,3 +524,22 @@ tbody tr:last-child td {
 .modal-footer {
   border-top: none;
 }
+
+
+
+.project-manager-bar {
+  background-color: #c1c4c6;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+  height: 20%;
+  width: 10%;
+  overflow-y: auto; /* Enable scrolling if content overflows */
+}
+
+
+.main-container {
+  text-align: center;
+  margin-top: 2%;
+  width: 85%;
+  overflow-y: auto;
+}
+
