--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,10 +1,6 @@
 /* Set background color for the entire page */
 
 
-.body{
-  text-align: center;
-}
-
 .main-layout {
   background-color: white;
   min-height: 100vh;
@@ -532,14 +528,14 @@ tbody tr:last-child td {
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
   height: 20%;
   width: 10%;
+  padding: 0;
   overflow-y: auto; /* Enable scrolling if content overflows */
 }
 
 
 .main-container {
-  text-align: center;
-  margin-top: 2%;
-  width: 85%;
+  text-align: left;
+  width: 92%;
   overflow-y: auto;
 }
 
